preWarmCache